--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-# requirements.txt
-polars==0.20.7
-fpdf2==2.6.1
-requests==2.32.5
-tqdm==4.67.1
+fpdf2==2.8.5
+polars==1.35.1
+Requests==2.32.5
+yfinance==0.2.66
